--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
 
 <!--REVIEW CAROUSEL -->
 <div class="container-fluid bg-white2 dotted-line text-center">
+<h2>What People Are Saying</h2>
 <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
@@ -201,14 +202,22 @@
   </div>
 
   </div>
-  <a href="#" class="btn btn-info btn-lg signup-button">Sign Up</a>
 </div>
 
+<!-- TWITTER TIMELINE EMBED -->
+
+  <a class="twitter-grid" href="https://twitter.com/stagelighter/timelines/632959891510947841">Wall of Love</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+          
 
 
   <script src="js/jquery-3.1.1.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="js/bootstrap.min.js"></script>
+
+
+  <!-- FOOTER -->
 
   <footer class="container-fluid text-center">
     <a href="#myPage" title="To Top">
