--- a/index.html
+++ b/index.html
@@ -206,8 +206,7 @@
 
 <!-- TWITTER TIMELINE EMBED -->
 
-  <a class="twitter-grid" href="https://twitter.com/stagelighter/timelines/632959891510947841">Wall of Love</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-
+  <a class="twitter-grid" href="https://twitter.com/stagelighter/timelines/632959891510947841"></a>
   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
           
 
