--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     <h4>"Stagelighter is the premiere online resource which lets actors from around the world get personal feedback from leading professionals."<br><span style="font-style:normal;">BROADWAYWORLD.COM</span></h4>
     </div>
     <div class="item">
-      <h4>"Finding yourself in the company of a seasoned professional who is open to your insistent questions about how to succeed in your career is typically a rare opportunity. Thanks to Stagelighter, times are changing for the next generation of talented performers."<br><span style="font-style:normal;">BACKSTAGE.COM</span></h4>
+      <h4>"Thanks to Stagelighter, times are changing for the next generation of talented performers."<br><span style="font-style:normal;">BACKSTAGE.COM</span></h4>
     </div>
     <div class="item">
       <h4>"New online resource for performers offers support from award-winning theatre professionals."<br><span style="font-style:normal;">PLAYBILL.COM</span></h4>
